Split into scss/sass

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -1,5 +1,5 @@
 // loaded with bower.  All of these can be downloaded and placed in
-// libraries folder as well
+// vendor folder as well
 
 // http://necolas.github.io/normalize.css/
 @import "../bower_components/normalize-scss/normalize"
